--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="/Portifolio-Pessoal/styles.css" rel="stylesheet"/>
+    <link <link rel="stylesheet" href="styles.css">/>
 </head>
 <body>
     <nav id="navbar">
