Nova Section Adicionada

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <ul>
           <a href="#welcome-section"><li>INÍCIO</li></a>
           <a href="#projects"><li>PROJETOS</li></a>
+          <a href="#about"><li>SOBRE MIM</li></a>
         </ul>
       </nav>
       <section id="welcome-section">
@@ -21,6 +22,11 @@
           Bem vindo para meu Portifólio
         </p>
       </section>
+      <header>Sobre Mim</header>
+      <section id="about"></section>
+      <p>
+        Eu sou um jovem programador, fiz apenas alguns cursos. Sou bom em HTML, CSS, e sei um Pouco de JS.
+      </p>
       <header>Meus Projetos</header>
       <section id="projects">
         <div class="my-projects">
