--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <nav id="navbar">
         <ul>
           <a href="#welcome-section"><li>INÍCIO</li></a>
-          <a href="#projects"><li>PROJETOS</li></a>
           <a href="#about"><li>SOBRE MIM</li></a>
+          <a href="#projects"><li>PROJETOS</li></a>
         </ul>
       </nav>
       <section id="welcome-section">
@@ -25,7 +25,7 @@
       <header>Sobre Mim</header>
       <section id="about"></section>
       <p>
-        Eu sou um jovem programador, fiz apenas alguns cursos. Sou bom em HTML, CSS, e sei um Pouco de JS.
+        Eu sou um jovem programador, fiz apenas<br> alguns cursos. Sou bom em HTML, CSS,<br> e sei um Pouco de JS.
       </p>
       <header>Meus Projetos</header>
       <section id="projects">
