--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </section>
       <header>Sobre Mim</header>
       <section id="about"></section> 
-      <p>
+      <p class=p-div>
         Eu sou um jovem programador, fiz apenas<br> alguns cursos. Sou bom em HTML, CSS,<br> e sei um Pouco de JS.
       </p>
       <header>Meus Projetos</header>
