--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
         </p>
       </section>
       <header>Sobre Mim</header>
-      <section id="about"></section> 
-      <p class=p-div>
-        Eu sou um jovem programador, fiz apenas<br> alguns cursos. Sou bom em HTML, CSS,<br> e sei um Pouco de JS.
-      </p>
+      <section id="about">
+        <p class=p-div>
+          Eu sou um jovem programador, fiz apenas<br> alguns cursos. Sou bom em HTML, CSS,<br> e sei um Pouco de JS.
+        </p>
+      </section> 
       <header>Meus Projetos</header>
       <section id="projects">
         <div class="my-projects">
