--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Portifólio Pessoal</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
 <body>
     <nav id="navbar">
         <ul>
@@ -15,7 +14,8 @@
           <a href="#about"><li>SOBRE MIM</li></a>
           <a href="#projects"><li>PROJETOS</li></a>
         </ul>
-      </nav>
+    </nav>
+  </div>
       <section id="welcome-section">
         <h1>Meu nome é Gabriel</h1>
         <p>
