Link Footer Alterado

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <a href="https://codepen.io/gabriel0007" target="target_blank"><li>Code Pen</li></a>
           </div>
         </ul>
-        <p>© Todos os direitos reservados a <a href="https://codepen.io/gabriel0007">Gabriel_Coder</a></p>
+        <p>© Todos os direitos reservados a <a href="https://github.com/gabtapia">gabtapia</a></p>
       </footer>
 </body>
 </html>
